trabalho2/y.output
   0  $accept : programa $end

   1  programa : T_PROGRAM T_ID T_SEMICOLON corpo T_DOT
   2           | error T_ID T_SEMICOLON corpo T_DOT
   3           | T_PROGRAM error T_SEMICOLON corpo T_DOT
   4           | T_PROGRAM T_ID error corpo T_DOT
   5           | T_PROGRAM T_ID T_SEMICOLON error T_DOT
   6           | T_PROGRAM T_ID T_SEMICOLON corpo error
   7           | error

   8  corpo : dc T_BEGIN comandos T_END
   9        | error T_BEGIN comandos T_END
  10        | dc error comandos T_END
  11        | dc T_BEGIN error T_END
  12        | dc T_BEGIN comandos error
  13        | error

  14  dc : dc_c dc_v dc_p
  15     | error dc_v dc_p
  16     | dc_c error dc_p
  17     | dc_c dc_v error

  18  dc_c : T_CONST T_ID numero T_SEMICOLON dc_c
  19       | error T_ID numero T_SEMICOLON dc_c
  20       | T_CONST error numero T_SEMICOLON dc_c
  21       | T_CONST T_ID error T_SEMICOLON dc_c
  22       | T_CONST T_ID numero error dc_c
  23       | T_CONST T_ID numero T_SEMICOLON error
  24       | error
  25       |

  26  dc_v : T_VAR variaveis T_COLON tipo_var T_SEMICOLON dc_v
  27       | error variaveis T_COLON tipo_var T_SEMICOLON dc_v
  28       | T_VAR error T_COLON tipo_var T_SEMICOLON dc_v
  29       | T_VAR variaveis error tipo_var T_SEMICOLON dc_v
  30       | T_VAR variaveis T_COLON error T_SEMICOLON dc_v
  31       | T_VAR variaveis T_COLON tipo_var error dc_v
  32       | T_VAR variaveis T_COLON tipo_var T_SEMICOLON error
  33       | error
  34       |

  35  tipo_var : T_REAL
  36           | T_INTEGER
  37           | error

  38  variaveis : T_ID mais_var

  39  mais_var : T_COMMA variaveis
  40           | error variaveis
  41           | T_COMMA error
  42           | error

  43  dc_p : T_PROCEDURE T_ID parametros T_SEMICOLON corpo_p dc_p
  44       | error T_ID parametros T_SEMICOLON corpo_p dc_p
  45       | T_PROCEDURE error parametros T_SEMICOLON corpo_p dc_p
  46       | T_PROCEDURE T_ID error T_SEMICOLON corpo_p dc_p
  47       | T_PROCEDURE T_ID parametros error corpo_p dc_p
  48       | T_PROCEDURE T_ID parametros T_SEMICOLON error dc_p
  49       | T_PROCEDURE T_ID parametros T_SEMICOLON corpo_p error
  50       | error

  51  parametros : T_L_PAREN lista_par T_R_PAREN
  52             | error lista_par T_R_PAREN
  53             | T_L_PAREN error T_R_PAREN
  54             | T_L_PAREN lista_par error
  55             | error

  56  lista_par : variaveis T_COLON tipo_var mais_par
  57            | error T_COLON tipo_var mais_par
  58            | variaveis error tipo_var mais_par
  59            | variaveis T_COLON error mais_par
  60            | variaveis T_COLON tipo_var error
  61            | error

  62  mais_par : T_SEMICOLON lista_par
  63           | error lista_par
  64           | error

  65  corpo_p : dc_v T_BEGIN comandos T_END T_SEMICOLON
  66          | error T_BEGIN comandos T_END T_SEMICOLON
  67          | dc_v error comandos T_END T_SEMICOLON
  68          | dc_v T_BEGIN error T_END T_SEMICOLON
  69          | dc_v T_BEGIN comandos error T_SEMICOLON
  70          | dc_v T_BEGIN comandos T_END error
  71          | error

  72  lista_arg : T_L_PAREN argumentos T_R_PAREN
  73            | error argumentos T_R_PAREN
  74            | T_L_PAREN error T_R_PAREN
  75            | T_L_PAREN argumentos error
  76            | error

  77  argumentos : T_ID mais_ident
  78             | error mais_ident
  79             | T_ID error
  80             | error

  81  mais_ident : T_SEMICOLON argumentos
  82             | error argumentos
  83             | error

  84  pfalsa : T_ELSE cmd
  85         | error cmd
  86         | T_ELSE error
  87         | error

  88  comandos : cmd T_SEMICOLON comandos
  89           | error T_SEMICOLON comandos
  90           | cmd error comandos
  91           | cmd T_SEMICOLON error
  92           | error

  93  cmd : T_READ T_L_PAREN variaveis T_R_PAREN
  94      | T_WRITE T_L_PAREN variaveis T_R_PAREN
  95      | T_WHILE T_L_PAREN condicao T_R_PAREN T_DO cmd
  96      | T_IF condicao T_THEN cmd pfalsa
  97      | T_ID T_ASSIGN expressao
  98      | T_ID lista_arg
  99      | T_BEGIN comandos T_END
 100      | error

 101  condicao : expressao relacao expressao
 102           | error relacao expressao
 103           | expressao error expressao
 104           | expressao relacao error
 105           | error

 106  relacao : T_EQUAL
 107          | T_DIFF
 108          | T_GREATER_EQ
 109          | T_LESSER_EQ
 110          | T_GREATER
 111          | T_LESSER

 112  expressao : termo outros_termos
 113            | error outros_termos
 114            | termo error
 115            | error

 116  op_un : T_PLUS
 117        | T_MINUS

 118  outros_termos : op_ad termo outros_termos
 119                | error termo outros_termos
 120                | op_ad error outros_termos
 121                | op_ad termo error
 122                | error

 123  op_ad : T_PLUS
 124        | T_MINUS

 125  termo : op_un fator mais_fatores
 126        | error fator mais_fatores
 127        | op_un error mais_fatores
 128        | op_un fator error
 129        | error

 130  mais_fatores : op_mul fator mais_fatores
 131               | error

 132  op_mul : T_TIMES
 133         | T_DIVISION
 134         | error

 135  fator : T_ID
 136        | numero
 137        | T_L_PAREN expressao T_R_PAREN

 138  numero : T_INUMBER
 139         | T_RNUMBER
 140         | error

state 0
	$accept : . programa $end  (0)

	error  shift 1
	T_PROGRAM  shift 2
	.  error

	programa  goto 3


state 1
	programa : error . T_ID T_SEMICOLON corpo T_DOT  (2)
	programa : error .  (7)

	T_ID  shift 4
	$end  reduce 7


state 2
	programa : T_PROGRAM . T_ID T_SEMICOLON corpo T_DOT  (1)
	programa : T_PROGRAM . error T_SEMICOLON corpo T_DOT  (3)
	programa : T_PROGRAM . T_ID error corpo T_DOT  (4)
	programa : T_PROGRAM . T_ID T_SEMICOLON error T_DOT  (5)
	programa : T_PROGRAM . T_ID T_SEMICOLON corpo error  (6)

	error  shift 5
	T_ID  shift 6
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : error T_ID . T_SEMICOLON corpo T_DOT  (2)

	T_SEMICOLON  shift 7
	.  error


state 5
	programa : T_PROGRAM error . T_SEMICOLON corpo T_DOT  (3)

	T_SEMICOLON  shift 8
	.  error


state 6
	programa : T_PROGRAM T_ID . T_SEMICOLON corpo T_DOT  (1)
	programa : T_PROGRAM T_ID . error corpo T_DOT  (4)
	programa : T_PROGRAM T_ID . T_SEMICOLON error T_DOT  (5)
	programa : T_PROGRAM T_ID . T_SEMICOLON corpo error  (6)

	error  shift 9
	T_SEMICOLON  shift 10
	.  error


7: shift/reduce conflict (shift 11, reduce 25) on error
state 7
	programa : error T_ID T_SEMICOLON . corpo T_DOT  (2)
	dc_c : .  (25)

	error  shift 11
	T_CONST  shift 12
	T_VAR  reduce 25
	T_PROCEDURE  reduce 25

	corpo  goto 13
	dc  goto 14
	dc_c  goto 15


8: shift/reduce conflict (shift 11, reduce 25) on error
state 8
	programa : T_PROGRAM error T_SEMICOLON . corpo T_DOT  (3)
	dc_c : .  (25)

	error  shift 11
	T_CONST  shift 12
	T_VAR  reduce 25
	T_PROCEDURE  reduce 25

	corpo  goto 16
	dc  goto 14
	dc_c  goto 15


9: shift/reduce conflict (shift 11, reduce 25) on error
state 9
	programa : T_PROGRAM T_ID error . corpo T_DOT  (4)
	dc_c : .  (25)

	error  shift 11
	T_CONST  shift 12
	T_VAR  reduce 25
	T_PROCEDURE  reduce 25

	corpo  goto 17
	dc  goto 14
	dc_c  goto 15


10: shift/reduce conflict (shift 18, reduce 25) on error
state 10
	programa : T_PROGRAM T_ID T_SEMICOLON . corpo T_DOT  (1)
	programa : T_PROGRAM T_ID T_SEMICOLON . error T_DOT  (5)
	programa : T_PROGRAM T_ID T_SEMICOLON . corpo error  (6)
	dc_c : .  (25)

	error  shift 18
	T_CONST  shift 12
	T_VAR  reduce 25
	T_PROCEDURE  reduce 25

	corpo  goto 19
	dc  goto 14
	dc_c  goto 15


11: shift/reduce conflict (shift 20, reduce 24) on error
11: shift/reduce conflict (shift 20, reduce 34) on error
11: shift/reduce conflict (shift 22, reduce 24) on T_VAR
11: reduce/reduce conflict (reduce 24, reduce 34) on T_PROCEDURE
state 11
	corpo : error . T_BEGIN comandos T_END  (9)
	corpo : error .  (13)
	dc : error . dc_v dc_p  (15)
	dc_c : error . T_ID numero T_SEMICOLON dc_c  (19)
	dc_c : error .  (24)
	dc_v : .  (34)

	error  shift 20
	T_BEGIN  shift 21
	T_VAR  shift 22
	T_ID  shift 23
	T_PROCEDURE  reduce 24
	T_DOT  reduce 13

	dc_v  goto 24


state 12
	dc_c : T_CONST . T_ID numero T_SEMICOLON dc_c  (18)
	dc_c : T_CONST . error numero T_SEMICOLON dc_c  (20)
	dc_c : T_CONST . T_ID error T_SEMICOLON dc_c  (21)
	dc_c : T_CONST . T_ID numero error dc_c  (22)
	dc_c : T_CONST . T_ID numero T_SEMICOLON error  (23)

	error  shift 25
	T_ID  shift 26
	.  error


state 13
	programa : error T_ID T_SEMICOLON corpo . T_DOT  (2)

	T_DOT  shift 27
	.  error


state 14
	corpo : dc . T_BEGIN comandos T_END  (8)
	corpo : dc . error comandos T_END  (10)
	corpo : dc . T_BEGIN error T_END  (11)
	corpo : dc . T_BEGIN comandos error  (12)

	error  shift 28
	T_BEGIN  shift 29
	.  error


15: shift/reduce conflict (shift 30, reduce 34) on error
state 15
	dc : dc_c . dc_v dc_p  (14)
	dc : dc_c . error dc_p  (16)
	dc : dc_c . dc_v error  (17)
	dc_v : .  (34)

	error  shift 30
	T_VAR  shift 22
	T_PROCEDURE  reduce 34

	dc_v  goto 31


state 16
	programa : T_PROGRAM error T_SEMICOLON corpo . T_DOT  (3)

	T_DOT  shift 32
	.  error


state 17
	programa : T_PROGRAM T_ID error corpo . T_DOT  (4)

	T_DOT  shift 33
	.  error


18: shift/reduce conflict (shift 20, reduce 13) on error
18: shift/reduce conflict (shift 20, reduce 24) on error
18: shift/reduce conflict (shift 20, reduce 34) on error
18: shift/reduce conflict (shift 22, reduce 24) on T_VAR
18: reduce/reduce conflict (reduce 24, reduce 34) on T_PROCEDURE
18: shift/reduce conflict (shift 34, reduce 13) on T_DOT
state 18
	programa : T_PROGRAM T_ID T_SEMICOLON error . T_DOT  (5)
	corpo : error . T_BEGIN comandos T_END  (9)
	corpo : error .  (13)
	dc : error . dc_v dc_p  (15)
	dc_c : error . T_ID numero T_SEMICOLON dc_c  (19)
	dc_c : error .  (24)
	dc_v : .  (34)

	error  shift 20
	T_BEGIN  shift 21
	T_VAR  shift 22
	T_DOT  shift 34
	T_ID  shift 23
	T_PROCEDURE  reduce 24

	dc_v  goto 24


state 19
	programa : T_PROGRAM T_ID T_SEMICOLON corpo . T_DOT  (1)
	programa : T_PROGRAM T_ID T_SEMICOLON corpo . error  (6)

	error  shift 35
	T_DOT  shift 36
	.  error


state 20
	dc_v : error . variaveis T_COLON tipo_var T_SEMICOLON dc_v  (27)
	dc_v : error .  (33)

	T_ID  shift 37
	error  reduce 33
	T_BEGIN  reduce 33
	T_PROCEDURE  reduce 33

	variaveis  goto 38


state 21
	corpo : error T_BEGIN . comandos T_END  (9)

	error  shift 39
	T_BEGIN  shift 40
	T_READ  shift 41
	T_WRITE  shift 42
	T_WHILE  shift 43
	T_IF  shift 44
	T_ID  shift 45
	.  error

	comandos  goto 46
	cmd  goto 47


state 22
	dc_v : T_VAR . variaveis T_COLON tipo_var T_SEMICOLON dc_v  (26)
	dc_v : T_VAR . error T_COLON tipo_var T_SEMICOLON dc_v  (28)
	dc_v : T_VAR . variaveis error tipo_var T_SEMICOLON dc_v  (29)
	dc_v : T_VAR . variaveis T_COLON error T_SEMICOLON dc_v  (30)
	dc_v : T_VAR . variaveis T_COLON tipo_var error dc_v  (31)
	dc_v : T_VAR . variaveis T_COLON tipo_var T_SEMICOLON error  (32)

	error  shift 48
	T_ID  shift 37
	.  error

	variaveis  goto 49


state 23
	dc_c : error T_ID . numero T_SEMICOLON dc_c  (19)

	error  shift 50
	T_INUMBER  shift 51
	T_RNUMBER  shift 52
	.  error

	numero  goto 53


state 24
	dc : error dc_v . dc_p  (15)

	error  shift 54
	T_PROCEDURE  shift 55
	.  error

	dc_p  goto 56


state 25
	dc_c : T_CONST error . numero T_SEMICOLON dc_c  (20)

	error  shift 50
	T_INUMBER  shift 51
	T_RNUMBER  shift 52
	.  error

	numero  goto 57


state 26
	dc_c : T_CONST T_ID . numero T_SEMICOLON dc_c  (18)
	dc_c : T_CONST T_ID . error T_SEMICOLON dc_c  (21)
	dc_c : T_CONST T_ID . numero error dc_c  (22)
	dc_c : T_CONST T_ID . numero T_SEMICOLON error  (23)

	error  shift 58
	T_INUMBER  shift 51
	T_RNUMBER  shift 52
	.  error

	numero  goto 59


state 27
	programa : error T_ID T_SEMICOLON corpo T_DOT .  (2)

	.  reduce 2


state 28
	corpo : dc error . comandos T_END  (10)

	error  shift 39
	T_BEGIN  shift 40
	T_READ  shift 41
	T_WRITE  shift 42
	T_WHILE  shift 43
	T_IF  shift 44
	T_ID  shift 45
	.  error

	comandos  goto 60
	cmd  goto 47


state 29
	corpo : dc T_BEGIN . comandos T_END  (8)
	corpo : dc T_BEGIN . error T_END  (11)
	corpo : dc T_BEGIN . comandos error  (12)

	error  shift 61
	T_BEGIN  shift 40
	T_READ  shift 41
	T_WRITE  shift 42
	T_WHILE  shift 43
	T_IF  shift 44
	T_ID  shift 45
	.  error

	comandos  goto 62
	cmd  goto 47


30: shift/reduce conflict (shift 54, reduce 33) on error
30: shift/reduce conflict (shift 55, reduce 33) on T_PROCEDURE
state 30
	dc : dc_c error . dc_p  (16)
	dc_v : error . variaveis T_COLON tipo_var T_SEMICOLON dc_v  (27)
	dc_v : error .  (33)

	error  shift 54
	T_PROCEDURE  shift 55
	T_ID  shift 37

	dc_p  goto 63
	variaveis  goto 38


state 31
	dc : dc_c dc_v . dc_p  (14)
	dc : dc_c dc_v . error  (17)

	error  shift 64
	T_PROCEDURE  shift 55
	.  error

	dc_p  goto 65


state 32
	programa : T_PROGRAM error T_SEMICOLON corpo T_DOT .  (3)

	.  reduce 3


state 33
	programa : T_PROGRAM T_ID error corpo T_DOT .  (4)

	.  reduce 4


state 34
	programa : T_PROGRAM T_ID T_SEMICOLON error T_DOT .  (5)

	.  reduce 5


state 35
	programa : T_PROGRAM T_ID T_SEMICOLON corpo error .  (6)

	.  reduce 6


state 36
	programa : T_PROGRAM T_ID T_SEMICOLON corpo T_DOT .  (1)

	.  reduce 1


state 37
	variaveis : T_ID . mais_var  (38)

	error  shift 66
	T_COMMA  shift 67
	.  error

	mais_var  goto 68


state 38
	dc_v : error variaveis . T_COLON tipo_var T_SEMICOLON dc_v  (27)

	T_COLON  shift 69
	.  error


39: reduce/reduce conflict (reduce 92, reduce 100) on error
39: shift/reduce conflict (shift 70, reduce 100) on T_SEMICOLON
state 39
	comandos : error . T_SEMICOLON comandos  (89)
	comandos : error .  (92)
	cmd : error .  (100)

	T_SEMICOLON  shift 70
	error  reduce 92
	T_END  reduce 92


state 40
	cmd : T_BEGIN . comandos T_END  (99)

	error  shift 39
	T_BEGIN  shift 40
	T_READ  shift 41
	T_WRITE  shift 42
	T_WHILE  shift 43
	T_IF  shift 44
	T_ID  shift 45
	.  error

	comandos  goto 71
	cmd  goto 47


state 41
	cmd : T_READ . T_L_PAREN variaveis T_R_PAREN  (93)

	T_L_PAREN  shift 72
	.  error


state 42
	cmd : T_WRITE . T_L_PAREN variaveis T_R_PAREN  (94)

	T_L_PAREN  shift 73
	.  error


state 43
	cmd : T_WHILE . T_L_PAREN condicao T_R_PAREN T_DO cmd  (95)

	T_L_PAREN  shift 74
	.  error


state 44
	cmd : T_IF . condicao T_THEN cmd pfalsa  (96)

	error  shift 75
	T_PLUS  shift 76
	T_MINUS  shift 77
	.  error

	condicao  goto 78
	expressao  goto 79
	termo  goto 80
	op_un  goto 81


state 45
	cmd : T_ID . T_ASSIGN expressao  (97)
	cmd : T_ID . lista_arg  (98)

	error  shift 82
	T_ASSIGN  shift 83
	T_L_PAREN  shift 84
	.  error

	lista_arg  goto 85


state 46
	corpo : error T_BEGIN comandos . T_END  (9)

	T_END  shift 86
	.  error


state 47
	comandos : cmd . T_SEMICOLON comandos  (88)
	comandos : cmd . error comandos  (90)
	comandos : cmd . T_SEMICOLON error  (91)

	error  shift 87
	T_SEMICOLON  shift 88
	.  error


state 48
	dc_v : T_VAR error . T_COLON tipo_var T_SEMICOLON dc_v  (28)

	T_COLON  shift 89
	.  error


state 49
	dc_v : T_VAR variaveis . T_COLON tipo_var T_SEMICOLON dc_v  (26)
	dc_v : T_VAR variaveis . error tipo_var T_SEMICOLON dc_v  (29)
	dc_v : T_VAR variaveis . T_COLON error T_SEMICOLON dc_v  (30)
	dc_v : T_VAR variaveis . T_COLON tipo_var error dc_v  (31)
	dc_v : T_VAR variaveis . T_COLON tipo_var T_SEMICOLON error  (32)

	error  shift 90
	T_COLON  shift 91
	.  error


state 50
	numero : error .  (140)

	.  reduce 140


state 51
	numero : T_INUMBER .  (138)

	.  reduce 138


state 52
	numero : T_RNUMBER .  (139)

	.  reduce 139


state 53
	dc_c : error T_ID numero . T_SEMICOLON dc_c  (19)

	T_SEMICOLON  shift 92
	.  error


state 54
	dc_p : error . T_ID parametros T_SEMICOLON corpo_p dc_p  (44)
	dc_p : error .  (50)

	T_ID  shift 93
	error  reduce 50
	T_BEGIN  reduce 50


state 55
	dc_p : T_PROCEDURE . T_ID parametros T_SEMICOLON corpo_p dc_p  (43)
	dc_p : T_PROCEDURE . error parametros T_SEMICOLON corpo_p dc_p  (45)
	dc_p : T_PROCEDURE . T_ID error T_SEMICOLON corpo_p dc_p  (46)
	dc_p : T_PROCEDURE . T_ID parametros error corpo_p dc_p  (47)
	dc_p : T_PROCEDURE . T_ID parametros T_SEMICOLON error dc_p  (48)
	dc_p : T_PROCEDURE . T_ID parametros T_SEMICOLON corpo_p error  (49)

	error  shift 94
	T_ID  shift 95
	.  error


state 56
	dc : error dc_v dc_p .  (15)

	.  reduce 15


state 57
	dc_c : T_CONST error numero . T_SEMICOLON dc_c  (20)

	T_SEMICOLON  shift 96
	.  error


58: shift/reduce conflict (shift 97, reduce 140) on T_SEMICOLON
state 58
	dc_c : T_CONST T_ID error . T_SEMICOLON dc_c  (21)
	numero : error .  (140)

	T_SEMICOLON  shift 97
	error  reduce 140


state 59
	dc_c : T_CONST T_ID numero . T_SEMICOLON dc_c  (18)
	dc_c : T_CONST T_ID numero . error dc_c  (22)
	dc_c : T_CONST T_ID numero . T_SEMICOLON error  (23)

	error  shift 98
	T_SEMICOLON  shift 99
	.  error


state 60
	corpo : dc error comandos . T_END  (10)

	T_END  shift 100
	.  error


61: reduce/reduce conflict (reduce 92, reduce 100) on error
61: shift/reduce conflict (shift 101, reduce 92) on T_END
61: shift/reduce conflict (shift 70, reduce 100) on T_SEMICOLON
state 61
	corpo : dc T_BEGIN error . T_END  (11)
	comandos : error . T_SEMICOLON comandos  (89)
	comandos : error .  (92)
	cmd : error .  (100)

	T_END  shift 101
	T_SEMICOLON  shift 70
	error  reduce 92


state 62
	corpo : dc T_BEGIN comandos . T_END  (8)
	corpo : dc T_BEGIN comandos . error  (12)

	error  shift 102
	T_END  shift 103
	.  error


state 63
	dc : dc_c error dc_p .  (16)

	.  reduce 16

